--- a/text/footer.html
+++ b/text/footer.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <p class="col-md-4 mb-0 text-muted">&copy; 2022 BCIT COMP1800 Creations</p>
     <a href="/"
