--- a/text/nav.html
+++ b/text/nav.html
@@ -1,3 +1,4 @@
+    <!DOCTYPE html>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
